--- a/templates/landing_page/index_new.html.twig
+++ b/templates/landing_page/index_new.html.twig
@@ -4,6 +4,7 @@
 
 {% block body %}
     <section class="countdown bg_brand_secondary">
+
         <div class="container-fluid">
             <div class="row">
                 <div class="col s12 m12 l5">
@@ -27,6 +28,7 @@
     </section>
     <form method="post">
         <div class="container">
+    {{form_start(form)}}
             <div class="row">
                 <div class="content col s12 m12 l8">
 
@@ -34,7 +36,7 @@
                    
 
               <label class="cure-radio">
-                            <input name="order[cart][cart_products][0]" value="2" type="radio">
+                            <input name="product" value="2" type="radio">
                             <article>
                                 <div class="card center-align">
                                     <div class="row">
@@ -76,7 +78,7 @@
                             </article>
                         </label>
                         <label class="cure-radio">
-                            <input name="order[cart][cart_products][0]" value="3" type="radio" checked="checked">
+                            <input name="product" value="3" type="radio" checked="checked">
                             <article>
                                 <div class="card center-align">
                                     <div class="row">
@@ -119,7 +121,7 @@
                             </article>
                         </label>
                         <label class="cure-radio">
-                            <input name="order[cart][cart_products][0]" value="4" type="radio">
+                            <input name="product" value="4" type="radio">
                             <article>
                                 <div class="card center-align">
                                     <div class="row">
